add markdown cell summarizing model preformance on test

--- a/MNIST_TF.ipynb
+++ b/MNIST_TF.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,18 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "11490434/11490434 [==============================] - 1s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(X_train, y_train), (X_test, y_test) = mnist.load_data()"
    ]
@@ -67,18 +58,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Change the shape of the tensor\n",
     "X_train = X_train.reshape((X_train.shape[0], 28, 28, 1))\n",
+    "X_test = X_test.reshape((X_test.shape[0], 28, 28, 1))\n",
     "\n",
     "# Normalize values\n",
     "X_train = X_train.astype(\"float32\")/255\n",
+    "X_test = X_test.astype(\"float32\")/255\n",
     "\n",
     "# One hot encode Y\n",
-    "y_train = to_categorical(y_train)\n"
+    "y_train = to_categorical(y_train)\n",
+    "y_test = to_categorical(y_test)\n",
+    "\n"
    ]
   },
   {
@@ -97,6 +99,7 @@
     "# build model with Keras's Sequential API\n",
     "model = Sequential([Conv2D(32, (3,3), activation='relu', input_shape=(28,28,1)), # first layer is a 2D conv layer with a 3x3 kernel\n",
     "                    MaxPooling2D((2,2)), # downsampling layer\n",
+    "                    Conv2D(32, (3,3), activation='relu', input_shape=(14,14,1)),\n",
     "                    Flatten(), # flatten the tensor\n",
     "                    Dense(100, activation='relu'), # Dense layer with 100 nodes\n",
     "                    Dense(10, activation=\"softmax\") # final layer 10 nodes - for each possible number\n",
@@ -136,40 +139,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "   1/1875 [..............................] - ETA: 4:47 - loss: 2.3243 - accuracy: 0.0312"
+      "Epoch 1/10\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-21 09:29:25.815534: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2022-10-21 14:55:54.738297: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1875/1875 [==============================] - 9s 5ms/step - loss: 0.2362 - accuracy: 0.9279\n",
+      "1875/1875 [==============================] - 13s 7ms/step - loss: 0.1915 - accuracy: 0.9414\n",
       "Epoch 2/10\n",
-      "1875/1875 [==============================] - 9s 5ms/step - loss: 0.0778 - accuracy: 0.9767\n",
+      "1875/1875 [==============================] - 13s 7ms/step - loss: 0.0531 - accuracy: 0.9837\n",
       "Epoch 3/10\n",
-      "1875/1875 [==============================] - 10s 5ms/step - loss: 0.0490 - accuracy: 0.9855\n",
+      "1875/1875 [==============================] - 14s 7ms/step - loss: 0.0349 - accuracy: 0.9889\n",
       "Epoch 4/10\n",
-      "1875/1875 [==============================] - 10s 5ms/step - loss: 0.0366 - accuracy: 0.9886\n",
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0246 - accuracy: 0.9923\n",
       "Epoch 5/10\n",
-      "1875/1875 [==============================] - 10s 5ms/step - loss: 0.0273 - accuracy: 0.9915\n",
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0179 - accuracy: 0.9941\n",
       "Epoch 6/10\n",
-      "1875/1875 [==============================] - 10s 5ms/step - loss: 0.0208 - accuracy: 0.9936\n",
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0128 - accuracy: 0.9959\n",
       "Epoch 7/10\n",
-      "1875/1875 [==============================] - 10s 5ms/step - loss: 0.0148 - accuracy: 0.9956\n",
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0104 - accuracy: 0.9964\n",
       "Epoch 8/10\n",
-      "1875/1875 [==============================] - 10s 5ms/step - loss: 0.0113 - accuracy: 0.9969\n",
+      "1875/1875 [==============================] - 14s 7ms/step - loss: 0.0082 - accuracy: 0.9972\n",
       "Epoch 9/10\n",
-      "1875/1875 [==============================] - 10s 5ms/step - loss: 0.0087 - accuracy: 0.9974\n",
+      "1875/1875 [==============================] - 14s 8ms/step - loss: 0.0056 - accuracy: 0.9982\n",
       "Epoch 10/10\n",
-      "1875/1875 [==============================] - 10s 6ms/step - loss: 0.0062 - accuracy: 0.9984\n"
+      "1875/1875 [==============================] - 14s 8ms/step - loss: 0.0048 - accuracy: 0.9985\n"
      ]
     }
    ],
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -213,6 +215,33 @@
     "plt.imshow(img, cmap=plt.get_cmap('gray'))\n",
     "plt.title(f\"Prediction: {np.argmax(model.predict((img.reshape((1, 28, 28, 1)).astype('float32'))/255)[0], axis=-1)}\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.04295302554965019, 0.989300012588501]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.test_on_batch(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Based on the test set accuracy the model has overfitted the training data slightly"
    ]
   }
  ],
