--- a/MNIST_TF.ipynb
+++ b/MNIST_TF.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +27,8 @@
     "\n",
     "from matplotlib import pyplot as plt\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Flatten, Conv2D, Dense, MaxPooling2D\n",
-    "from keras.optimizers import SGD\n",
+    "from keras.layers import Flatten, Conv2D, Dense, MaxPooling2D, Dropout\n",
+    "from keras.optimizers import Adam\n",
     "from keras.utils import to_categorical\n",
     "from keras.datasets import mnist"
    ]
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,15 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# build model with Keras's Sequential API\n",
     "model = Sequential([Conv2D(32, (3,3), activation='relu', input_shape=(28,28,1)), # first layer is a 2D conv layer with a 3x3 kernel\n",
     "                    MaxPooling2D((2,2)), # downsampling layer\n",
+    "                    Dropout(0.2), # dropout layer\n",
     "                    Conv2D(32, (3,3), activation='relu', input_shape=(14,14,1)),\n",
     "                    Flatten(), # flatten the tensor\n",
+    "                    Dropout(0.2), # dropout layer\n",
     "                    Dense(100, activation='relu'), # Dense layer with 100 nodes\n",
     "                    Dense(10, activation=\"softmax\") # final layer 10 nodes - for each possible number\n",
     "                    ])"
@@ -115,11 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt = SGD(learning_rate=0.01, momentum=0.9)\n",
+    "opt = Adam(learning_rate=0.001)\n",
     "model.compile(optimizer=opt, loss='categorical_crossentropy', metrics=['accuracy'])"
    ]
   },
@@ -132,46 +134,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-21 14:55:54.738297: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1875/1875 [==============================] - 13s 7ms/step - loss: 0.1915 - accuracy: 0.9414\n",
+      "Epoch 1/10\n",
+      "1875/1875 [==============================] - 17s 9ms/step - loss: 0.1400 - accuracy: 0.9571\n",
       "Epoch 2/10\n",
-      "1875/1875 [==============================] - 13s 7ms/step - loss: 0.0531 - accuracy: 0.9837\n",
+      "1875/1875 [==============================] - 17s 9ms/step - loss: 0.0494 - accuracy: 0.9849\n",
       "Epoch 3/10\n",
-      "1875/1875 [==============================] - 14s 7ms/step - loss: 0.0349 - accuracy: 0.9889\n",
+      "1875/1875 [==============================] - 16s 9ms/step - loss: 0.0354 - accuracy: 0.9882\n",
       "Epoch 4/10\n",
-      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0246 - accuracy: 0.9923\n",
+      "1875/1875 [==============================] - 17s 9ms/step - loss: 0.0271 - accuracy: 0.9908\n",
       "Epoch 5/10\n",
-      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0179 - accuracy: 0.9941\n",
+      "1875/1875 [==============================] - 17s 9ms/step - loss: 0.0212 - accuracy: 0.9931\n",
       "Epoch 6/10\n",
-      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0128 - accuracy: 0.9959\n",
+      "1875/1875 [==============================] - 16s 9ms/step - loss: 0.0174 - accuracy: 0.9942\n",
       "Epoch 7/10\n",
-      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0104 - accuracy: 0.9964\n",
+      "1875/1875 [==============================] - 17s 9ms/step - loss: 0.0144 - accuracy: 0.9952\n",
       "Epoch 8/10\n",
-      "1875/1875 [==============================] - 14s 7ms/step - loss: 0.0082 - accuracy: 0.9972\n",
+      "1875/1875 [==============================] - 17s 9ms/step - loss: 0.0132 - accuracy: 0.9956\n",
       "Epoch 9/10\n",
-      "1875/1875 [==============================] - 14s 8ms/step - loss: 0.0056 - accuracy: 0.9982\n",
+      "1875/1875 [==============================] - 16s 9ms/step - loss: 0.0116 - accuracy: 0.9959\n",
       "Epoch 10/10\n",
-      "1875/1875 [==============================] - 14s 8ms/step - loss: 0.0048 - accuracy: 0.9985\n"
+      "1875/1875 [==============================] - 14s 8ms/step - loss: 0.0104 - accuracy: 0.9963\n"
      ]
     }
    ],
@@ -219,16 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.04295302554965019, 0.989300012588501]"
+       "[0.033170610666275024, 0.9908999800682068]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,6 +231,15 @@
    "metadata": {},
    "source": [
     "> Based on the test set accuracy the model has overfitted the training data slightly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"mnist_cnn.h5\")"
    ]
   }
  ],
