fix broken imports on windows

--- a/MNIST_TF.ipynb
+++ b/MNIST_TF.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,10 +26,10 @@
     "import random\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Flatten, Conv2D, Dense, MaxPooling2D, Dropout\n",
-    "from keras.optimizers import Adam\n",
-    "from keras.utils import to_categorical\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Flatten, Conv2D, Dense, MaxPooling2D, Dropout\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.utils import to_categorical\n",
     "from keras.datasets import mnist"
    ]
   },
@@ -245,7 +245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('MachineLearning')",
+   "display_name": "Python 3.10.6 ('ML')",
    "language": "python",
    "name": "python3"
   },
@@ -264,7 +264,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "087e8b641f2d1431bd9bc95a919f1a7b9add817acfe363050e84d7c383fe80fb"
+    "hash": "09d57f408c35da917af4f02c91f14661dcd130ab185ad135ff984ba9243ddecf"
    }
   }
  },
